KSENROLL-13054 - Fixed spacing on header so that it look exactly the same as in staging.
git-svn-id: https://svn.kuali.org/repos/student/enrollment/ks-core/trunk@70027 0ac02d80-fb3f-11dc-a574-c57244a850eb

--- a/ks-common/ks-common-web/src/main/webapp/themes/ksboot/stylesheets/ks-header.less
+++ b/ks-common/ks-common-web/src/main/webapp/themes/ksboot/stylesheets/ks-header.less
@@ -16,7 +16,6 @@
 header.uif-sticky {
   background-color: white;
   box-shadow: 0px 6px 6px -5px rgba(0, 0, 0, 0.5);
-  padding-bottom: 1px;
   min-height:70px;
 }
 
@@ -35,4 +34,5 @@ header.uif-sticky {
   display: block;
   font-size: 0.75em;
   padding-top: 12px;
+  margin: 0;
 }
